# AI-Benchmark

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PUBLICATION_REPORT.md  architectural_review_evidence.json  coverage.xml  generate_reports.py  generate_sprint11_reports.py  pyproject.toml  repeatability_raw.json  report_from_db.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security-scan.yml  test.yml
aibenchmark/: cli.py  cli_automation.py
aibenchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aibenchmark/api/: app.py  deps.py  errors.py
aibenchmark/app/: __init__.py  analytics.py  auth.py  auto_validation.py  calibration.py  certification.py  config.py  config_migration.py  cross_provider.py  engine.py  execution_policy.py  history.py  logging.py  memory_profiler.py  model_selector.py  models.py  parallel_executor.py  profiling.py  prompts.py  provider_cache.py  provider_capabilities.py  provider_health.py  provider_registry.py  rate_limits.py  rc_validation.py  recommendation_validation.py  reliability.py  statistics.py  token_accounting.py  validation.py
aibenchmark/interfaces/: __init__.py  benchmark.py  evaluator.py  provider.py  reporter.py  strategy.py
aibenchmark/plugin/: __init__.py
aibenchmark/plugins/: __init__.py
aibenchmark/tests/: test_analytics.py  test_auth.py  test_benchmarks.py  test_cli.py  test_cli_providers.py  test_config.py  test_coverage_boost.py  test_cross_provider.py  test_engine_retry_health.py  test_evaluators.py  test_integration.py  test_model_differentiation.py  test_plugins.py  test_prompts.py  test_provider_capabilities.py  test_provider_certification.py  test_provider_contract_matrix.py  test_provider_failure_recovery.py  test_provider_health.py  test_provider_integration.py  test_provider_registry.py  test_providers.py  test_rate_limits.py  test_reports.py  test_scoring.py  test_sprint10_auth.py  test_sprint10_auto_validation.py  test_sprint10_coverage_config.py  test_sprint10_execution_policy.py  test_sprint10_plugin_manager.py  test_sprint10_validation.py  test_sprint11_coverage_analytics.py  test_sprint11_coverage_engine.py  test_sprint11_coverage_gaps.py  test_sprint13_maintenance.py  test_sprint14_api.py  test_sprint15_automation.py  test_sprint4.py  test_sprint4_reporters.py  test_sprint6_cli.py  (+16 more)
automation_runs/27/: history.db
configs/: benchmark.yaml  providers.yaml
docs/: automation-guide.md  ci-cd-guide.md  cli-reference.md  database-migration.md  developer-guide.md  installation.md  notification-guide.md  quickstart.md  regression-guide.md  scheduler-reference.md  security.md  sprint-1.md  sprint-2.md  sprint-4.md  sprint-5.md  sprint-6-plan.md  troubleshooting.md
docs/architecture/: rc-boundary-checklist.md  sprint-6-architecture-resolution.md  sprint-6-architecture-review.md
docs/plugins/: compatibility.md  sdk.md
docs/reviews/: RELEASE_AUDIT.md  SPRINT4_ACCEPTANCE_REPORT.md  (+80 more)
examples/: benchmark.example.yaml
history_test/: results.md
prompts/: code_review.yaml  coding.yaml  debugging.yaml  general.yaml  instruction.yaml  json.yaml  latency.yaml  reasoning.yaml  research.yaml
release/: architecture-findings-verification.md  configuration-findings.md  false-positive-report.md  release-status-review.md  roadmap-impact-analysis.md  v2.0.0-final-report.md  v2.0.0-governance-report.md  v2.0.0-known-limitations.md  v2.0.0-production-checklist.md  v2.0.0-quality-report.md  v2.0.0-release-manifest.md  v2.0.0-release-notes.md  v2.0.0-release-summary.md  verified-defects.md
reports/: benchmark-bug-report.md  benchmark-certification-report.md  benchmark-governance-report.md  benchmark-quality-summary.md  benchmark-regression-report.md  benchmark-report.md  benchmark-results.json  benchmark-summary.md  benchmark-validation-report.md  claude-code-routing.yaml  execution-report.md  execution-results.json  model-classification.csv  model-rankings.csv  updated-leaderboard.csv  updated-routing.yaml
scripts/: bootstrap.bat  bootstrap.sh  dependency_audit.py  validate_governance_docs.py
sprint12_5_deliverables/: FINAL_VERDICT.txt  benchmark-validation-report.md  performance-report.md  preliminary_validation.json  production-checklist.md  production-readiness-report.md  recommendation-validation-report.md  recommendation_routing_validation.json  release-candidate-report.md  reliability-report.md  routing-validation-report.md  routing_validation_tests.json  stress-test-report.md
sprint12_deliverables/: benchmark-trend-analysis.md  claude-routing.yaml  confidence-scoring.md  decision-engine.md  decision-report.md  execution-report.md  leaderboard.md  recommendation-engine.md  recommendations.json  results.cost  results.governance  results.leaderboard  results.reliability  results.statistics  results.team  results.trends  results.validation  routing-generator.md  validation-report.md
sprint13_deliverables/: developer-guide.md  execution-report.md  maintenance-report.md  provider-cache.md  startup-diagnostics.md  validation-report.md
sprint14_deliverables/: api-design.md  api-reference.md  api-stability-report.md  integration-guide.md  openapi.yaml  performance-report.md  release-notes-v2.1.0.md  repeatability-report.md  root-cause-analysis.md  validation-report.md
sprint15_deliverables/: automation-architecture.md  ci-cd-integration.md  database-migration.md  notification-system.md  performance-report.md  regression-engine.md  release-notes-v2.2.0.md  scheduler-design.md  validation-report.md
sprint1_acceptance/: results.csv  results.json  results.md
sprint1_final/: results.csv
sprint1_main/: results.csv
sprint1_mock/: results.csv  results.json  results.md
sprint1_netfail/: results.csv  results.json  results.md
sprint1_proof/: results.json  results.md
sprint1_qa/: results.csv  results.json  results.md
(+59 files in other folders)
