[project]
name = "aibenchmark"
version = "1.3.0"
description = "Production-grade LLM benchmarking for AI engineering tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "AI-Benchmark Team" },
]
keywords = ["llm", "benchmark", "ai", "testing", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.5",
    "pytest-cov>=5.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]
all = [
    "aibenchmark[dev]",
    "bandit>=1.7",
    "safety>=2.3",
    "semgrep>=1.0",
]

[project.scripts]
benchmark = "aibenchmark.cli:main"

[project.entry-points."aibenchmark.providers"]
# Built-in providers are registered via decorator in aibenchmark.plugins
# External plugins can add new providers here

[project.entry-points."aibenchmark.benchmarks"]
# Built-in benchmarks are registered via decorator in aibenchmark.plugins
# External plugins can add new benchmarks here

[project.entry-points."aibenchmark.reporters"]
# Built-in reporters are registered via decorator in aibenchmark.plugins
# External plugins can add new reporters here

[project.entry-points."aibenchmark.evaluators"]
# External plugins can add evaluators here

[project.entry-points."aibenchmark.strategies"]
# External plugins can add strategies here

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aibenchmark*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
strict = true
exclude = "(^|/)(tests|aibenchmark/tests)(/|$)"
disable_error_code = "unused-ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=aibenchmark --cov-report=term-missing --cov-config=pyproject.toml"
markers = [
    "integration: marks tests as integration tests that may require external services",
]
[tool.coverage.run]
source = ["aibenchmark"]
omit = [
    "aibenchmark/cli.py",
    "aibenchmark/plugins/providers/*",
    "aibenchmark/plugin/__init__.py",
]

[tool.coverage.report]
fail_under = 95
